# cross-asset-research-free

./: BUILD_REPORT.md  BUILD_REPORT_v1.4.md  DECIMAL_EXPORT_FIX.md  Dockerfile  EXPORT_RECOVERY_FIX.md  HEALTHFIX.md  NO_CODE_SETUP.md  PACKAGE_MANIFEST.json  README.md  README.txt  ROUND2_RESEARCH_DESIGN.md  ROUND2_UPGRADE.md  WORKER_FIX.md  db.py  pyproject.toml  render.yaml  status_api.py
app/: cli.py  config.py  control.py  db.py  exporter.py  http_utils.py  logging_utils.py  pipeline.py  quality.py  round2.py  session_utils.py  status_api.py  storage.py  worker.py
app/adapters/: __init__.py  alpaca_adapter.py  base.py  boe_adapter.py  bundesbank_adapter.py  coinbase_adapter.py  fred_adapter.py
config/: instruments.yaml  instruments_full_quality_reference.yaml  settings.yaml
docs/: acceptance_matrix.md  analysis_prompt.md  data_dictionary.md  export_retrieval.md  methodology.md  request_specification.md  setup_guide.md  source_feasibility.md  troubleshooting.md
scripts/: discovery_quality.sh  incremental_intraday.sh  scheduled_hourly.sh  update_official_yields.sh
sql/: 001_init.sql
tests/: test_aligned_export_compact.py  test_alpaca_adapter.py  test_checkpoint_resume.py  test_config.py  test_decimal_export_types.py  test_exporter_isolation.py  test_health_endpoint.py  test_no_code_control.py  test_quality.py  test_quality_calendar.py  test_resampling.py  test_rolls.py  test_round2.py  test_sessions.py  test_split_alignment.py  test_worker_architecture.py
