[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cross-asset-research-system"
version = "1.1.0"
description = "Integrity-first cross-asset market-data collection and research export pipeline"
requires-python = ">=3.11,<3.14"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["app*"]
